--- a/source/karuna-covid-releif/index.html.erb
+++ b/source/karuna-covid-releif/index.html.erb
@@ -26,4 +26,12 @@
       <div class="spacer"></div>
     </div>
   </section>
+  <section class="gallery">
+    <div><%= image_tag 'covid-releif-1.JPG' %></div>
+    <div><%= image_tag 'covod-releif-2.JPG' %></div>
+    <div><%= image_tag 'covid-releif-3.JPG' %></div>
+    <div><%= image_tag 'covid-releif-4.JPG' %></div>
+  </section>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
 </main>
