--- a/source/karuna-covid-relief/index.html.erb
+++ b/source/karuna-covid-relief/index.html.erb
@@ -1,4 +1,4 @@
-<main class="page covid-releif-page">
+<main class="page covid-relief-page">
   <section class="landing-hero">
     <div class="container">
       <div class="spacer"></div>
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="spacer"></div>
 
-      <h1 class="text-center">Karuna Covid Releif</h1>
+      <h1 class="text-center">Karuna Covid Relief</h1>
       
       <div class="inner">
         <p>At the start of this year with the Covid-19 pandemic hitting the entire world, those living under the poverty line were hit even harder. Loss of jobs led to lack of food, and they were unable to have proper protective measures to combat this pandemic.</p>
@@ -27,10 +27,10 @@
     </div>
   </section>
   <section class="gallery">
-    <div><%= image_tag 'covid-releif-1.JPG' %></div>
-    <div><%= image_tag 'covod-releif-2.JPG' %></div>
-    <div><%= image_tag 'covid-releif-3.JPG' %></div>
-    <div><%= image_tag 'covid-releif-4.JPG' %></div>
+    <div><%= image_tag 'covid-relief-1.JPG' %></div>
+    <div><%= image_tag 'covod-relief-2.JPG' %></div>
+    <div><%= image_tag 'covid-relief-3.JPG' %></div>
+    <div><%= image_tag 'covid-relief-4.JPG' %></div>
   </section>
   <div class="spacer"></div>
   <div class="spacer"></div>
